# miner

./: .gitignore  README.md
cmake-projects/cpp-miner/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake-projects/cpp-miner/include/miner/: block.h  miner.h  sha256.h
cmake-projects/cpp-miner/src/: block.cpp  main.cpp  miner.cpp  sha256.cpp
cmake-projects/cpp-miner/tests/: test_block.cpp  test_miner.cpp  test_sha256.cpp
fpga-projects/dma-loopback/: .gitignore  README.md  dma_loopback.xpr  system_wrapper.xsa
fpga-projects/dma-loopback/dma_loopback.runs/impl_1/: system_wrapper.bit  system_wrapper_clock_utilization_routed.rpt  system_wrapper_utilization_placed.rpt
fpga-projects/dma-loopback/dma_loopback.runs/synth_1/: system_wrapper_utilization_synth.rpt
fpga-projects/led-blink/: README.md  led_blink.bif  led_blink.xpr
fpga-projects/led-blink/led_blink.runs/impl_1/: processing_system_wrapper.bit  processing_system_wrapper_clock_utilization_routed.rpt  processing_system_wrapper_utilization_placed.rpt
fpga-projects/led-blink/led_blink.runs/synth_1/: processing_system_wrapper_utilization_synth.rpt
fpga-projects/led-blink/led_blink.srcs/constrs_1/new/: rp.xdc
fpga-projects/rtl-miner/: .gitignore  README.md  stream_fir.sv
fpga-projects/rtl-miner/constraints/: Cora-Z7-07S-Master.xdc
fpga-projects/rtl-miner/src/: Hasher.sv  MinerCore.sv  MinerTop.sv  Sha256Compression.sv  Sha256Types.sv
fpga-projects/rtl-miner/testbenches/: TestSha256Compression.sv
fpga-projects/stopwatch/: README.md
fpga-projects/verification/testbenches/: Example1.sv
(+75 files in other folders)
